# bullshit-bot-bot-bot

./: .env.example  .gitignore  README.md  pyproject.toml
bullshit_bot_bot_bot/: middleware.py  openai_setup.py  run.py  tools.py  utils.py
bullshit_bot_bot_bot/handlers/: conflicts.py  factcheck.py  missing_considerations.py  sources.py  summarize.py
