[tool.poetry]
name = "bullshit-bot-bot-bot"
version = "0.1.0"
description = ""
authors = ["chaosGuppy <lawphi56@gmail.com>"]
packages = [{ include = "bullshit_bot_bot_bot" }]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.3"
openai = "^0.27.8"
langchain = "^0.0.212"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.1.3"
ipython = "^8.14.0"
google-api-python-client = "^2.90.0"
anthropic = "^0.2.10"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
